# OpenCode-Token

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  build.bat  export_opencode_tokens.py  opencode_token_gui.py  opencode_token_gui.spec  pyproject.toml  start.bat
docs/: architecture.md  development.md  release.md
docs/superpowers/plans/: 2026-03-15-opencode-token-gui.md  2026-03-16-gui-chart-rendering-fix.md
docs/superpowers/specs/: 2026-03-15-opencode-token-gui-design.md  2026-03-16-gui-chart-rendering-fix-design.md
opencode_token_app/: charts.py  data_loader.py  exporter.py  gui.py  prices.json  pricing.py  viewmodels.py
scripts/: build.bat  start.bat
tests/: test_data_loader.py  test_gui_viewmodels.py  test_pricing.py
