[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opencode-token"
version = "0.2.1"
description = "Analyze OpenCode token usage from opencode.db and export priced usage reports."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "OpenCode Token maintainers" }
]
dependencies = [
  "matplotlib>=3.8",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
]
build = [
  "pyinstaller>=6.0",
]
dev = [
  "pytest>=8",
  "pyinstaller>=6.0",
]

[project.scripts]
opencode-token-gui = "opencode_token_gui:main"
opencode-token-export = "export_opencode_tokens:main"

[tool.setuptools.packages.find]
include = ["opencode_token_app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
